data/all_generated_tests/raw_wast_tests/if_InvalidorInconsistentControlFlowGraph_1789.wast
;; 10. **Test: Early Exit with Improper Stack Handling**     - **Description**: Include a `br` instruction early in an `if` block that fails to handle the stack correctly, thus causing a mismatch when the `else` block executes.     - **Constraint Checked**: Proper stack handling during early exit and subsequent execution paths.     - **CFG Relevance**: Ensures CFG handles early exits and maintains correct stack states for continuing execution.

(assert_invalid
  (module
    (func $early-exit-stack-mismatch (result i32)
      (if (i32.const 1)
        (then
          (br 0 (i32.const 42))
        )
        (else
          (i32.const 1)
        )
      )
    )
  )
  "type mismatch"
)